@@ -3403,7 +3403,7 @@ test bind-22.35 {HandleEventGenerate: options <FocusIn> -detail NotifyVirtual} -
     return $x
 } -cleanup {
     destroy .t.f
-} -result {}
+} -result {FocusIn NotifyVirtual}
 
 test bind-22.35.1 {HandleEventGenerate: options <FocusOut> -detail NotifyVirtual} -setup {
     frame .t.f -class Test -width 150 -height 100
@@ -3417,7 +3417,7 @@ test bind-22.35.1 {HandleEventGenerate: options <FocusOut> -detail NotifyVirtual
     return $x
 } -cleanup {
     destroy .t.f
-} -result {}
+} -result {FocusOut NotifyVirtual}
 
 test bind-22.36 {HandleEventGenerate: options <Enter> -detail NotifyVirtual} -setup {
     frame .t.f -class Test -width 150 -height 100
@@ -3659,7 +3659,7 @@ test bind-22.53 {HandleEventGenerate: options <FocusIn> -mode NotifyNormal} -set
     return $x
 } -cleanup {
     destroy .t.f
-} -result {}
+} -result {NotifyNormal}
 
 test bind-22.54 {HandleEventGenerate: options <Key> -mode NotifyNormal} -setup {
     frame .t.f -class Test -width 150 -height 100
